--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -15,6 +15,9 @@
     </ul>
 
     <div dropdown *ngIf="loggedIn()" class="dropdown">
+      <span class="mr-2">
+        <img src="{{photoUrl}}" alt="">
+      </span>
       <a dropdownToggle class="dropdown-toggle text-light">
         Welcome {{authService.decodedToken?.unique_name | titlecase}}
       </a>
