--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -27,14 +27,14 @@
         <div class="card-footer">
           <div class="btn-group d-flex">
             <button class="btn btn-primary w-100"><i class="fa fa-heart mr-1"></i>Like</button>
-            <button class="btn btn-success w-100"><i class="fa fa-envelope mr-1"></i>Message</button>
+            <button class="btn btn-success w-100" (click)="selectTab(3)"><i class="fa fa-envelope mr-1"></i>Message</button>
           </div>
         </div>
       </div>
     </div>
     <div class="col-sm-8">
       <div class="tab-panel">
-        <tabset class="member-tabset">
+        <tabset class="member-tabset" #memberTabs>
           <tab heading="About {{user?.knownAs}}">
             <h4>Description</h4>
             <p>{{user.introduction}}</p>
@@ -50,8 +50,8 @@
               <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"></ngx-gallery>
             </div>
           </tab>
-          <tab heading="Interests">
-            <p>Messages will go here</p>
+          <tab heading="Messages">
+            <app-member-messages [recipientId] = "user.id"></app-member-messages>
           </tab>
         </tabset>
       </div>
